Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -223,7 +223,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pd.plotting.scatter"
+    "pd.plotting.scatter_matrix(df, figzi)"
    ]
   },
   {
