--- a/index.ipynb
+++ b/index.ipynb
@@ -222,7 +222,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "grouped1 = "
+   ]
   },
   {
    "cell_type": "markdown",
