Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -223,7 +223,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "grouped1 = df.groupby('State')[[]]"
+    "grouped1 = df.groupby('State')[['']]"
    ]
   },
   {
