Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -223,7 +223,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "grouped1 = df.groupby('State')[['Deaths']]"
+    "grouped1 = df.groupby('State')[['Deaths']].sum()\n",
+    "grouped"
    ]
   },
   {
