--- a/index.ipynb
+++ b/index.ipynb
@@ -219,12 +219,105 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Deaths</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>State</th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <td>Alabama</td>\n",
+       "      <td>860780</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>Alaska</td>\n",
+       "      <td>63334</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>Arizona</td>\n",
+       "      <td>838094</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>Arkansas</td>\n",
+       "      <td>522914</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>California</td>\n",
+       "      <td>4307061</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>Colorado</td>\n",
+       "      <td>561283</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>Connecticut</td>\n",
+       "      <td>531290</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>Delaware</td>\n",
+       "      <td>135933</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>District of Columbia</td>\n",
+       "      <td>94073</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>Florida</td>\n",
+       "      <td>3131111</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                       Deaths\n",
+       "State                        \n",
+       "Alabama                860780\n",
+       "Alaska                  63334\n",
+       "Arizona                838094\n",
+       "Arkansas               522914\n",
+       "California            4307061\n",
+       "Colorado               561283\n",
+       "Connecticut            531290\n",
+       "Delaware               135933\n",
+       "District of Columbia    94073\n",
+       "Florida               3131111"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "grouped1 = df.groupby('State')[['Deaths']].sum()\n",
-    "grouped"
+    "grouped1.head(10)"
    ]
   },
   {
