Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -167,7 +167,7 @@
    "source": [
     "df = pd.read_csv('causes_of_death.tsv', delimiter='\\t')\n",
     "print(len(df))\n",
-    "df.head()"
+    "df.head(20)"
    ]
   },
   {
