Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -132,34 +132,304 @@
        "      <td>7366</td>\n",
        "      <td>448.0</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <td>5</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Alabama</td>\n",
+       "      <td>1</td>\n",
+       "      <td>&lt; 1 year</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>M</td>\n",
+       "      <td>Black or African American</td>\n",
+       "      <td>2054-5</td>\n",
+       "      <td>2732</td>\n",
+       "      <td>173241</td>\n",
+       "      <td>1577.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>6</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Alabama</td>\n",
+       "      <td>1</td>\n",
+       "      <td>&lt; 1 year</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>M</td>\n",
+       "      <td>White</td>\n",
+       "      <td>2106-3</td>\n",
+       "      <td>2788</td>\n",
+       "      <td>364029</td>\n",
+       "      <td>765.9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>7</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Alabama</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1-4 years</td>\n",
+       "      <td>1-4</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>F</td>\n",
+       "      <td>Asian or Pacific Islander</td>\n",
+       "      <td>A-PI</td>\n",
+       "      <td>10</td>\n",
+       "      <td>30421</td>\n",
+       "      <td>Unreliable</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>8</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Alabama</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1-4 years</td>\n",
+       "      <td>1-4</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>F</td>\n",
+       "      <td>Black or African American</td>\n",
+       "      <td>2054-5</td>\n",
+       "      <td>292</td>\n",
+       "      <td>670420</td>\n",
+       "      <td>43.6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>9</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Alabama</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1-4 years</td>\n",
+       "      <td>1-4</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>F</td>\n",
+       "      <td>White</td>\n",
+       "      <td>2106-3</td>\n",
+       "      <td>385</td>\n",
+       "      <td>1389699</td>\n",
+       "      <td>27.7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>10</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Alabama</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1-4 years</td>\n",
+       "      <td>1-4</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>M</td>\n",
+       "      <td>Black or African American</td>\n",
+       "      <td>2054-5</td>\n",
+       "      <td>400</td>\n",
+       "      <td>686063</td>\n",
+       "      <td>58.3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>11</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Alabama</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1-4 years</td>\n",
+       "      <td>1-4</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>M</td>\n",
+       "      <td>White</td>\n",
+       "      <td>2106-3</td>\n",
+       "      <td>561</td>\n",
+       "      <td>1457208</td>\n",
+       "      <td>38.5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>12</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Alabama</td>\n",
+       "      <td>1</td>\n",
+       "      <td>5-14 years</td>\n",
+       "      <td>5-14</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>F</td>\n",
+       "      <td>Black or African American</td>\n",
+       "      <td>2054-5</td>\n",
+       "      <td>357</td>\n",
+       "      <td>1777031</td>\n",
+       "      <td>20.1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>13</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Alabama</td>\n",
+       "      <td>1</td>\n",
+       "      <td>5-14 years</td>\n",
+       "      <td>5-14</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>F</td>\n",
+       "      <td>White</td>\n",
+       "      <td>2106-3</td>\n",
+       "      <td>620</td>\n",
+       "      <td>3608616</td>\n",
+       "      <td>17.2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>14</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Alabama</td>\n",
+       "      <td>1</td>\n",
+       "      <td>5-14 years</td>\n",
+       "      <td>5-14</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>M</td>\n",
+       "      <td>Asian or Pacific Islander</td>\n",
+       "      <td>A-PI</td>\n",
+       "      <td>10</td>\n",
+       "      <td>72892</td>\n",
+       "      <td>Unreliable</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>15</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Alabama</td>\n",
+       "      <td>1</td>\n",
+       "      <td>5-14 years</td>\n",
+       "      <td>5-14</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>M</td>\n",
+       "      <td>Black or African American</td>\n",
+       "      <td>2054-5</td>\n",
+       "      <td>495</td>\n",
+       "      <td>1827893</td>\n",
+       "      <td>27.1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>16</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Alabama</td>\n",
+       "      <td>1</td>\n",
+       "      <td>5-14 years</td>\n",
+       "      <td>5-14</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>M</td>\n",
+       "      <td>White</td>\n",
+       "      <td>2106-3</td>\n",
+       "      <td>841</td>\n",
+       "      <td>3809162</td>\n",
+       "      <td>22.1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>17</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Alabama</td>\n",
+       "      <td>1</td>\n",
+       "      <td>15-24 years</td>\n",
+       "      <td>15-24</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>F</td>\n",
+       "      <td>Asian or Pacific Islander</td>\n",
+       "      <td>A-PI</td>\n",
+       "      <td>22</td>\n",
+       "      <td>77467</td>\n",
+       "      <td>28.4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>18</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Alabama</td>\n",
+       "      <td>1</td>\n",
+       "      <td>15-24 years</td>\n",
+       "      <td>15-24</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>F</td>\n",
+       "      <td>Black or African American</td>\n",
+       "      <td>2054-5</td>\n",
+       "      <td>1203</td>\n",
+       "      <td>1960325</td>\n",
+       "      <td>61.4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>19</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Alabama</td>\n",
+       "      <td>1</td>\n",
+       "      <td>15-24 years</td>\n",
+       "      <td>15-24</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>F</td>\n",
+       "      <td>White</td>\n",
+       "      <td>2106-3</td>\n",
+       "      <td>2226</td>\n",
+       "      <td>3811460</td>\n",
+       "      <td>58.4</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   Notes    State  State Code Ten-Year Age Groups Ten-Year Age Groups Code  \\\n",
-       "0    NaN  Alabama           1            < 1 year                        1   \n",
-       "1    NaN  Alabama           1            < 1 year                        1   \n",
-       "2    NaN  Alabama           1            < 1 year                        1   \n",
-       "3    NaN  Alabama           1            < 1 year                        1   \n",
-       "4    NaN  Alabama           1            < 1 year                        1   \n",
+       "    Notes    State  State Code Ten-Year Age Groups Ten-Year Age Groups Code  \\\n",
+       "0     NaN  Alabama           1            < 1 year                        1   \n",
+       "1     NaN  Alabama           1            < 1 year                        1   \n",
+       "2     NaN  Alabama           1            < 1 year                        1   \n",
+       "3     NaN  Alabama           1            < 1 year                        1   \n",
+       "4     NaN  Alabama           1            < 1 year                        1   \n",
+       "5     NaN  Alabama           1            < 1 year                        1   \n",
+       "6     NaN  Alabama           1            < 1 year                        1   \n",
+       "7     NaN  Alabama           1           1-4 years                      1-4   \n",
+       "8     NaN  Alabama           1           1-4 years                      1-4   \n",
+       "9     NaN  Alabama           1           1-4 years                      1-4   \n",
+       "10    NaN  Alabama           1           1-4 years                      1-4   \n",
+       "11    NaN  Alabama           1           1-4 years                      1-4   \n",
+       "12    NaN  Alabama           1          5-14 years                     5-14   \n",
+       "13    NaN  Alabama           1          5-14 years                     5-14   \n",
+       "14    NaN  Alabama           1          5-14 years                     5-14   \n",
+       "15    NaN  Alabama           1          5-14 years                     5-14   \n",
+       "16    NaN  Alabama           1          5-14 years                     5-14   \n",
+       "17    NaN  Alabama           1         15-24 years                    15-24   \n",
+       "18    NaN  Alabama           1         15-24 years                    15-24   \n",
+       "19    NaN  Alabama           1         15-24 years                    15-24   \n",
        "\n",
-       "   Gender Gender Code                              Race Race Code  Deaths  \\\n",
-       "0  Female           F  American Indian or Alaska Native    1002-5      14   \n",
-       "1  Female           F         Asian or Pacific Islander      A-PI      24   \n",
-       "2  Female           F         Black or African American    2054-5    2093   \n",
-       "3  Female           F                             White    2106-3    2144   \n",
-       "4    Male           M         Asian or Pacific Islander      A-PI      33   \n",
+       "    Gender Gender Code                              Race Race Code  Deaths  \\\n",
+       "0   Female           F  American Indian or Alaska Native    1002-5      14   \n",
+       "1   Female           F         Asian or Pacific Islander      A-PI      24   \n",
+       "2   Female           F         Black or African American    2054-5    2093   \n",
+       "3   Female           F                             White    2106-3    2144   \n",
+       "4     Male           M         Asian or Pacific Islander      A-PI      33   \n",
+       "5     Male           M         Black or African American    2054-5    2732   \n",
+       "6     Male           M                             White    2106-3    2788   \n",
+       "7   Female           F         Asian or Pacific Islander      A-PI      10   \n",
+       "8   Female           F         Black or African American    2054-5     292   \n",
+       "9   Female           F                             White    2106-3     385   \n",
+       "10    Male           M         Black or African American    2054-5     400   \n",
+       "11    Male           M                             White    2106-3     561   \n",
+       "12  Female           F         Black or African American    2054-5     357   \n",
+       "13  Female           F                             White    2106-3     620   \n",
+       "14    Male           M         Asian or Pacific Islander      A-PI      10   \n",
+       "15    Male           M         Black or African American    2054-5     495   \n",
+       "16    Male           M                             White    2106-3     841   \n",
+       "17  Female           F         Asian or Pacific Islander      A-PI      22   \n",
+       "18  Female           F         Black or African American    2054-5    1203   \n",
+       "19  Female           F                             White    2106-3    2226   \n",
        "\n",
-       "  Population  Crude Rate  \n",
-       "0       3579  Unreliable  \n",
-       "1       7443       322.5  \n",
-       "2     169339      1236.0  \n",
-       "3     347921       616.2  \n",
-       "4       7366       448.0  "
+       "   Population  Crude Rate  \n",
+       "0        3579  Unreliable  \n",
+       "1        7443       322.5  \n",
+       "2      169339      1236.0  \n",
+       "3      347921       616.2  \n",
+       "4        7366       448.0  \n",
+       "5      173241      1577.0  \n",
+       "6      364029       765.9  \n",
+       "7       30421  Unreliable  \n",
+       "8      670420        43.6  \n",
+       "9     1389699        27.7  \n",
+       "10     686063        58.3  \n",
+       "11    1457208        38.5  \n",
+       "12    1777031        20.1  \n",
+       "13    3608616        17.2  \n",
+       "14      72892  Unreliable  \n",
+       "15    1827893        27.1  \n",
+       "16    3809162        22.1  \n",
+       "17      77467        28.4  \n",
+       "18    1960325        61.4  \n",
+       "19    3811460        58.4  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
