Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -437,7 +437,7 @@
    "source": [
     "df = pd.read_csv('causes_of_death.tsv', delimiter='\\t')\n",
     "print(len(df))\n",
-    "df.head(20)"
+    "df.head[20,"
    ]
   },
   {
