--- a/index.ipynb
+++ b/index.ipynb
@@ -36,7 +36,7 @@
    "source": [
     "df = pd.read_csv('causes_of_death.tsv', delimiter='\\t')\n",
     "print(len(df))\n",
-    "df.head[20,40]"
+    "df.shu[20,40]"
    ]
   },
   {
