Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -22,22 +22,242 @@
      ]
     },
     {
-     "ename": "AttributeError",
-     "evalue": "'DataFrame' object has no attribute 'example'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0mTraceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-12-5eee745f5bc7>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0mdf\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpd\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mread_csv\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'causes_of_death.tsv'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdelimiter\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'\\t'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdf\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0mdf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mexample\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m10\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;32m/opt/conda/envs/learn-env/lib/python3.6/site-packages/pandas/core/generic.py\u001b[0m in \u001b[0;36m__getattr__\u001b[0;34m(self, name)\u001b[0m\n\u001b[1;32m   5177\u001b[0m             \u001b[0;32mif\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_info_axis\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_can_hold_identifiers_and_holds_name\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mname\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   5178\u001b[0m                 \u001b[0;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mname\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 5179\u001b[0;31m             \u001b[0;32mreturn\u001b[0m \u001b[0mobject\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m__getattribute__\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mname\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   5180\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   5181\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0m__setattr__\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mname\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mvalue\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mAttributeError\u001b[0m: 'DataFrame' object has no attribute 'example'"
-     ]
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Notes</th>\n",
+       "      <th>State</th>\n",
+       "      <th>State Code</th>\n",
+       "      <th>Ten-Year Age Groups</th>\n",
+       "      <th>Ten-Year Age Groups Code</th>\n",
+       "      <th>Gender</th>\n",
+       "      <th>Gender Code</th>\n",
+       "      <th>Race</th>\n",
+       "      <th>Race Code</th>\n",
+       "      <th>Deaths</th>\n",
+       "      <th>Population</th>\n",
+       "      <th>Crude Rate</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <td>612</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Delaware</td>\n",
+       "      <td>10</td>\n",
+       "      <td>5-14 years</td>\n",
+       "      <td>5-14</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>M</td>\n",
+       "      <td>White</td>\n",
+       "      <td>2106-3</td>\n",
+       "      <td>108</td>\n",
+       "      <td>696840</td>\n",
+       "      <td>15.5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>4029</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Wisconsin</td>\n",
+       "      <td>55</td>\n",
+       "      <td>65-74 years</td>\n",
+       "      <td>65-74</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>M</td>\n",
+       "      <td>Asian or Pacific Islander</td>\n",
+       "      <td>A-PI</td>\n",
+       "      <td>400</td>\n",
+       "      <td>28569</td>\n",
+       "      <td>1400.1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>2554</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>New Mexico</td>\n",
+       "      <td>35</td>\n",
+       "      <td>35-44 years</td>\n",
+       "      <td>35-44</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>F</td>\n",
+       "      <td>American Indian or Alaska Native</td>\n",
+       "      <td>1002-5</td>\n",
+       "      <td>739</td>\n",
+       "      <td>255843</td>\n",
+       "      <td>288.8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>1077</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Illinois</td>\n",
+       "      <td>17</td>\n",
+       "      <td>15-24 years</td>\n",
+       "      <td>15-24</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>F</td>\n",
+       "      <td>Asian or Pacific Islander</td>\n",
+       "      <td>A-PI</td>\n",
+       "      <td>123</td>\n",
+       "      <td>751437</td>\n",
+       "      <td>16.4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>707</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>District of Columbia</td>\n",
+       "      <td>11</td>\n",
+       "      <td>55-64 years</td>\n",
+       "      <td>55-64</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>M</td>\n",
+       "      <td>Black or African American</td>\n",
+       "      <td>2054-5</td>\n",
+       "      <td>7039</td>\n",
+       "      <td>294629</td>\n",
+       "      <td>2389.1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>1278</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Iowa</td>\n",
+       "      <td>19</td>\n",
+       "      <td>55-64 years</td>\n",
+       "      <td>55-64</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>M</td>\n",
+       "      <td>American Indian or Alaska Native</td>\n",
+       "      <td>1002-5</td>\n",
+       "      <td>84</td>\n",
+       "      <td>7814</td>\n",
+       "      <td>1075.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>343</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>California</td>\n",
+       "      <td>6</td>\n",
+       "      <td>&lt; 1 year</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>M</td>\n",
+       "      <td>White</td>\n",
+       "      <td>2106-3</td>\n",
+       "      <td>19597</td>\n",
+       "      <td>3641682</td>\n",
+       "      <td>538.1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>2006</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Mississippi</td>\n",
+       "      <td>28</td>\n",
+       "      <td>45-54 years</td>\n",
+       "      <td>45-54</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>F</td>\n",
+       "      <td>Asian or Pacific Islander</td>\n",
+       "      <td>A-PI</td>\n",
+       "      <td>70</td>\n",
+       "      <td>35683</td>\n",
+       "      <td>196.2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>2956</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Oklahoma</td>\n",
+       "      <td>40</td>\n",
+       "      <td>5-14 years</td>\n",
+       "      <td>5-14</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>M</td>\n",
+       "      <td>Black or African American</td>\n",
+       "      <td>2054-5</td>\n",
+       "      <td>154</td>\n",
+       "      <td>514938</td>\n",
+       "      <td>29.9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>1108</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Illinois</td>\n",
+       "      <td>17</td>\n",
+       "      <td>55-64 years</td>\n",
+       "      <td>55-64</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>F</td>\n",
+       "      <td>American Indian or Alaska Native</td>\n",
+       "      <td>1002-5</td>\n",
+       "      <td>111</td>\n",
+       "      <td>45363</td>\n",
+       "      <td>244.7</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      Notes                 State  State Code Ten-Year Age Groups  \\\n",
+       "612     NaN              Delaware          10          5-14 years   \n",
+       "4029    NaN             Wisconsin          55         65-74 years   \n",
+       "2554    NaN            New Mexico          35         35-44 years   \n",
+       "1077    NaN              Illinois          17         15-24 years   \n",
+       "707     NaN  District of Columbia          11         55-64 years   \n",
+       "1278    NaN                  Iowa          19         55-64 years   \n",
+       "343     NaN            California           6            < 1 year   \n",
+       "2006    NaN           Mississippi          28         45-54 years   \n",
+       "2956    NaN              Oklahoma          40          5-14 years   \n",
+       "1108    NaN              Illinois          17         55-64 years   \n",
+       "\n",
+       "     Ten-Year Age Groups Code  Gender Gender Code  \\\n",
+       "612                      5-14    Male           M   \n",
+       "4029                    65-74    Male           M   \n",
+       "2554                    35-44  Female           F   \n",
+       "1077                    15-24  Female           F   \n",
+       "707                     55-64    Male           M   \n",
+       "1278                    55-64    Male           M   \n",
+       "343                         1    Male           M   \n",
+       "2006                    45-54  Female           F   \n",
+       "2956                     5-14    Male           M   \n",
+       "1108                    55-64  Female           F   \n",
+       "\n",
+       "                                  Race Race Code  Deaths Population Crude Rate  \n",
+       "612                              White    2106-3     108     696840       15.5  \n",
+       "4029         Asian or Pacific Islander      A-PI     400      28569     1400.1  \n",
+       "2554  American Indian or Alaska Native    1002-5     739     255843      288.8  \n",
+       "1077         Asian or Pacific Islander      A-PI     123     751437       16.4  \n",
+       "707          Black or African American    2054-5    7039     294629     2389.1  \n",
+       "1278  American Indian or Alaska Native    1002-5      84       7814     1075.0  \n",
+       "343                              White    2106-3   19597    3641682      538.1  \n",
+       "2006         Asian or Pacific Islander      A-PI      70      35683      196.2  \n",
+       "2956         Black or African American    2054-5     154     514938       29.9  \n",
+       "1108  American Indian or Alaska Native    1002-5     111      45363      244.7  "
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "df = pd.read_csv('causes_of_death.tsv', delimiter='\\t')\n",
     "print(len(df))\n",
-    "df.example(10)"
+    "df.sample(10)"
    ]
   },
   {
