--- a/index.ipynb
+++ b/index.ipynb
@@ -406,7 +406,7 @@
     }
    ],
    "source": [
-    "grouped1 = df.groupby('State')[['Deaths']].sum()\n",
+    "grouped1 = df.groupby('State')[['Deaths', '']].sum()\n",
     "grouped1.head(10)"
    ]
   },
