--- a/index.ipynb
+++ b/index.ipynb
@@ -309,7 +309,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -400,13 +400,13 @@
        "Florida               3131111"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "grouped1 = df.groupby('State')[['Deaths', '']].sum()\n",
+    "grouped1 = df.groupby('State')[['Deaths', 'Population']].sum()\n",
     "grouped1.head(10)"
    ]
   },
