Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -309,7 +309,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -334,9 +334,11 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>Deaths</th>\n",
+       "      <th>State Code</th>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>State</th>\n",
+       "      <th></th>\n",
        "      <th></th>\n",
        "    </tr>\n",
        "  </thead>\n",
@@ -344,69 +346,79 @@
        "    <tr>\n",
        "      <td>Alabama</td>\n",
        "      <td>860780</td>\n",
+       "      <td>81</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>Alaska</td>\n",
        "      <td>63334</td>\n",
+       "      <td>164</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>Arizona</td>\n",
        "      <td>838094</td>\n",
+       "      <td>368</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>Arkansas</td>\n",
        "      <td>522914</td>\n",
+       "      <td>405</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>California</td>\n",
        "      <td>4307061</td>\n",
+       "      <td>564</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>Colorado</td>\n",
        "      <td>561283</td>\n",
+       "      <td>704</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>Connecticut</td>\n",
        "      <td>531290</td>\n",
+       "      <td>729</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>Delaware</td>\n",
        "      <td>135933</td>\n",
+       "      <td>690</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>District of Columbia</td>\n",
        "      <td>94073</td>\n",
+       "      <td>715</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>Florida</td>\n",
        "      <td>3131111</td>\n",
+       "      <td>1080</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                       Deaths\n",
-       "State                        \n",
-       "Alabama                860780\n",
-       "Alaska                  63334\n",
-       "Arizona                838094\n",
-       "Arkansas               522914\n",
-       "California            4307061\n",
-       "Colorado               561283\n",
-       "Connecticut            531290\n",
-       "Delaware               135933\n",
-       "District of Columbia    94073\n",
-       "Florida               3131111"
+       "                       Deaths  State Code\n",
+       "State                                    \n",
+       "Alabama                860780          81\n",
+       "Alaska                  63334         164\n",
+       "Arizona                838094         368\n",
+       "Arkansas               522914         405\n",
+       "California            4307061         564\n",
+       "Colorado               561283         704\n",
+       "Connecticut            531290         729\n",
+       "Delaware               135933         690\n",
+       "District of Columbia    94073         715\n",
+       "Florida               3131111        1080"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "grouped1 = df.groupby('State')[['Deaths', 'State Code', '']].sum()\n",
+    "grouped1 = df.groupby('State')[['Deaths', 'State Code']].sum()\n",
     "grouped1.head(10)"
    ]
   },
