Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -313,7 +313,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df['Population'] = df.Population."
+    "df['Population'] = df.Population.to_numeric()"
    ]
   },
   {
