Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -325,7 +325,7 @@
     }
    ],
    "source": [
-    "df['Population'] = pd.to_numeric(Population)"
+    "df['Population'] = df.astype({'col1': 'int32'}).dtypes"
    ]
   },
   {
