Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -333,7 +333,7 @@
     }
    ],
    "source": [
-    "df.astype({'Population': 'int64'})"
+    "df[' Colum'] = pd.to_numeric(df['DataFrame Column'])"
    ]
   },
   {
